# auralis-backend

./: .gitignore  README.md  pyproject.toml
api/: __init__.py  __main__.py
model/: __init__.py  pyproject.toml
webscraper/: pipelines.py  settings.py
webscraper/spiders/: scraper.py
