[project]
name = "auralis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.115.11"]

[tool.uv.sources]
model = { workspace = true }

[tool.uv.workspace]
members = ["model"]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]
