[project]
name = "auralis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "duckduckgo-search>=7.5.0",
    "fastapi[standard]>=0.115.11",
    "requests>=2.32.3",
]

[tool.uv.sources]
model = { workspace = true }

[tool.uv.workspace]
members = ["model"]

[dependency-groups]
dev = ["ruff>=0.9.9"]
